# paratosthenes

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  cuda_search_interval.cpp  cuda_search_interval.cu  cuda_search_interval.h  cuda_search_interval.hpp  cuda_sieve.cpp  cuda_sieve.cu  cuda_sieve_support.cu  mpi_sieve.c  mpi_sieve.h  openmp_sieve.cpp  paratosthenes.py  serial_sieve.cpp
