cmake_minimum_required (VERSION 3.1.0 FATAL_ERROR)
project (Paratosthenes)
add_executable(Paratosthenes_serial serial_sieve.cpp)
target_compile_features(Paratosthenes_serial PRIVATE cxx_range_for)

find_package(OpenMP)
if(OPENMP_FOUND)
	add_executable(Paratosthenes_openmp openmp_sieve.cpp)
	set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
	target_compile_features(Paratosthenes_openmp PRIVATE cxx_range_for)
endif()

find_package(CUDA)
if(CUDA_FOUND)
	cuda_add_executable(Paratosthenes_cuda cuda_sieve.cpp)
	target_compile_features(Paratosthenes_cuda PRIVATE cxx_range_for)
endif()
